refactor sacred practice … now fits on one page

--- a/main.tex
+++ b/main.tex
@@ -320,27 +320,26 @@ connected to these sources of inspiration.
   \tab and our striving advances The Destiny.
 }{}
 
-\noindent The pursuit of scientific truth is one part of our religious purpose.
-There is no logical proof that such a pursuit is good. There are no experiments
-that we can do to demonstrate that an evidence based understanding of how the
-world works is a good goal for our lives. And yet, we devote ourselves to this
-pursuit as a higher calling. The importance of pursuing scientific truth is a
-given in our lives that is as obvious as our own existence.
+\noindent The pursuit of scientific truth is a central part of our religious
+practice. No logical proof or experiment can demonstrate that scientific truth
+is good. And yet, we devote ourselves to science as to a higher calling.
 
-Greater even than our commitment to scientific truth is our devotion to expressing the full Arete of Life. We find tremendous uplifting significance in fully living up to our
-potential, both individual and collective. As individuals we flower within our
-local communities. Together we help Life take root and flower amongst the
-stars. Fully expressing the Arete of Life brings honor to the unbroken thread
-of ancestors who made our lives possible. The significance of this purpose is not rationally determined, but is basic to
-our very nature. Similarly, the values from which this purpose springs have developed through our individual aesthetic reactions to direct individual experiences of profound meaning.
+Science is a uniquely human expression of the Arete of Life. Using science to
+understand and manipulate the world for the benefit of Life brings honor to the
+unbroken thread of ancestors who made our lives possible. We find tremendous
+significance in living up to our potential in all ways, both individual and
+collective.
 
-Our religion is not this purpose, but rather the activity of whole heartedly pursuing it. We strive to constantly
+If our purpose is to fully express the Arete of Life, then our religion is the
+practice of whole heartedly pursuing this purpose. We strive to constantly
 strengthen and promote the values and goals underlying our religious movement
 ... not because our religion demands it of us, but because the values and
-purpose are the essential expression of our nature. The power of our religion comes not from its unique access to ``True values and
-purposes'', but rather from its ability to provide us with the support to
-effectively live the values we have chosen --- indeed --- the values that
-have chosen us!
+purpose are the essential expression of our nature.
+
+The power of our religion comes not from its unique access to ``True values and
+purposes'', but from supporting us in living the values we have discovered in
+ourselves. Our sacred practice helps us fulfil our duty to flower as
+individuals and collectively help Life take root amongst the stars.
 
 
 
