Fix quotation marks

--- a/main.tex
+++ b/main.tex
@@ -355,8 +355,8 @@ individuals and collectively help Life take root amongst the stars.
 \noindent The love for an endeavor is a greater gift than is natural aptitude for it.
 Natural aptitude alone will always be overtaken and surpassed by the ceaseless
 practice of those who love an activity. In the words of de Saint-Exup\'{e}ry,
-"if you would build a ship, don't tell people to gather wood and hammer nails,
-instead teach them to long for the endless wild sea."
+``if you would build a ship, don't tell people to gather wood and hammer nails,
+instead teach them to long for the endless wild sea.''
 
 There was a time in my life when the most common thing you'd hear
 from me was a sigh. Life was futile, tasteless and bland. It took all of my
