reflow paragraph text

--- a/main.tex
+++ b/main.tex
@@ -496,11 +496,12 @@ grasping and the option to proactively create our lives.
   \tab to Grow Ours, not just Get Mine.
 }{}
 
-\noindent While it may be true that service of others provides happiness and life
-satisfaction for the person who is doing the serving, the motivation for the
-service is important. Something is missed when service to others is done to look good or even just
-because we know that service leads to a happier life. Service brings the most peace and satisfaction when it springs from a depth of character where such service is simply the
-right thing to do.
+\noindent While it may be true that service of others provides happiness and
+life satisfaction for the person who is doing the serving, the motivation for
+the service is important. Something is missed when service to others is done to
+look good or even just because we know that service leads to a happier life.
+Service brings the most peace and satisfaction when it springs from a depth of
+character where such service is simply the right thing to do.
 
 There is a trap of motivation that may be called spiritual narcissism. People
 who seek after spiritual enlightenment, satisfaction, and peace as if they are
