"and Kindred" to title page

--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@
 % Set book title
 \title{\tiny{The SolSeed Movement}\\\large{\textbf{We Believe}}}
 % Include Author name and Copyright holder name
-\author{\tiny{version 3.0}\\Brandon CS Sanders}
+\author{\tiny{version 3.0}\\ \\ \\Brandon CS Sanders\\\small{and Kindred}}
 \begin{titlingpage}
 \maketitle
 \end{titlingpage}
