big refactor of main.tex (mostly deletions) to get to v3.0.0

--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@
 % Set book title
 \title{\tiny{The SolSeed Movement}\\\large{\textbf{We Believe}}}
 % Include Author name and Copyright holder name
-\author{\tiny{version 3.0}\\ \\ \\Brandon CS Sanders\\\small{and Kindred}}
+\author{\tiny{version 3.0.0}\\ \\ \\Brandon CS Sanders\\\small{and Kindred}}
 \begin{titlingpage}
 \maketitle
 \end{titlingpage}
@@ -111,27 +111,28 @@ is worthy of veneration!
 }{}
 
 \noindent It is the nature of Life to flower and spread. During the Devonian
-some 420 million years ago, Life burst out of the sea and took root on the
-land. The period of adaptive radiation that followed drove an upward spiral of
-innovation creating increasingly more complex expressions of Life.
+420 million years ago, Life burst out of the sea and took root on land. The
+adaptive radiation that followed drove an upward spiral of innovation,
+dramatically increasing the diversity of Life.
 
-It is awesome to realize that complex Life exists even though our universe is
-strongly biased toward decay and collapse. Scientists call the tendency for
-things to run down the ``second law of thermodynamics.'' The second law can be
-summarized as ``energy always flows downhill toward less and less usable
-forms.''
+Complex Life exists even though our universe is strongly biased toward decay
+and collapse. Scientists call the tendency for things to run down the ``second
+law of thermodynamics.'' Since the beginning of Life on our planet, effectively
+every organism has died and every species has gone extinct (\textgreater
+99.9\%).
 
-Life is the force that sometimes creates an upward eddy in the downward current
-of destruction. The process of evolution that created the wonderful diversity
-of species is a long slow steady climb. It is the story of the creation of
-possibilities by countless individuals unwittingly making countless
-contributions across countless generations.
+Life is a process that sometimes creates an upward eddy in the downward current
+of destruction dictated by the second law. Life created the diversity we see
+today from countless individuals making countless contributions across countless
+generations.
+
+Arete is a Greek word that means living up to our potential and fulfilling our
+purpose. When we say ``the Arete of Life'' we mean the complex whole of Life,
+including the upward spiral of creation and the myriad deaths and extinctions
+that give rise to that spiral.  We celebrate it all.
 
 Ants carrying, eagles soaring, people loving \ldots none of these would exist
-without Life's slow and steady upward spiral of creation.
-
-
-
+without Life's erratic yet tenacious upward spiral of creation.
 
 
 
@@ -249,7 +250,7 @@ Humanity has a use, a role to play, a thing to do.
 
 \imagefacingchapter{images/Dedicated}
 \chapter{Dedicated}
-\setlength\epigraphwidth{3.0in}
+\setlength\epigraphwidth{2.2in}
 \epigraph{
   We who answer this call\\
   dedicate ourselves to Life.\\
@@ -262,7 +263,7 @@ Humanity has a use, a role to play, a thing to do.
 \noindent Many of life's choicest rewards come from being in relationship with
 others. Our most important relationships gain special potency when they are
 formed within the context of a larger shared purpose. Regular practice with a
-community of like-minded indviduals keeps us rolling in our chosen direction
+community of like-minded individuals keeps us rolling in our chosen direction
 even when we lack inspiration and are overwhelmed by the concerns of everyday
 life.
 
@@ -280,11 +281,11 @@ Simply stated, Life is better when lived together.
 
 \imagefacingchapter{images/Awakening}
 \chapter{Awakening}
-\setlength\epigraphwidth{3.0in}
+\setlength\epigraphwidth{2.6in}
 \epigraph{
   Through art and the natural world\\
   we awaken within ourselves and others\\
-  \tab the cosmic religious feeling\\
+  \tab the Cosmic Religious Feeling\\
   \tab that ignites wonder,\\
   \tab fosters compassion, and\\
   \tab inspires us to proactively create.
@@ -336,10 +337,11 @@ strengthen and promote the values and goals underlying our religious movement
 ... not because our religion demands it of us, but because the values and
 purpose are the essential expression of our nature.
 
-The power of our religion comes not from its unique access to ``True values and
-purposes'', but from supporting us in living the values we have discovered in
-ourselves. Our sacred practice helps us fulfil our duty to flower as
-individuals and collectively help Life take root amongst the stars.
+The power of our religion comes not from unique access to ``True'' values and
+purposes, but from supporting us in living the values we have discovered in
+ourselves. Our sacred practice helps us fulfill our individual duty to
+flower in our communities and our species' duty to help Life take root
+and flower amongst the stars.
 
 
 
@@ -358,23 +360,22 @@ practice of those who love an activity. In the words of de Saint-Exup\'{e}ry,
 ``if you would build a ship, don't tell people to gather wood and hammer nails,
 instead teach them to long for the endless wild sea.''
 
-There was a time in my life when the most common thing you'd hear
-from me was a sigh. Life was futile, tasteless and bland. It took all of my
-reserves to meet the minimums. This ``sighing'' period of my life lasted for
-months. Things got dramatically better when I began treatment for depression.
-Suddenly I was full of ideas and brimming over with energy to try new things.
-
-The contrast between these two adjacent periods of my life was startling. I,
-the same person, could be more or less alive. I went from seeing Life as a
-binary property where I was either alive or dead, to seeing Life as a
-continuous property. An individual organism, a group of organisms, and indeed
-the body of all life could be more or less alive from moment to moment.
-
 We are only powerful when we are fully, passionately alive. We only do great
 and beautiful things when we have enough gumption to get off the couch and take
 action. If we lack the will to act, our best and wisest intentions come to nothing.
 
-Passion inspires and motivates us. Passion is our source of power!
+In an age of cars, machines, and computers it is tempting to adopt a
+metaphor of self that places our conscious mind in the role of operator and the
+rest of us as the machine that is being operated. This metaphor is grossly
+inaccurate and provides little insight about how to create what we seek to
+create in the world. Instead we adopt the model of our conscious mind as a
+rider on top of the elephant of our unconscious mind and body.
+
+Motivations strong enough to be labeled as passions come almost entirely from
+our elephants. We are attracted to some things and repelled from others not by
+clearly reasoned philosophical arguments, but by the powerful aesthetic
+reactions of our subconscious minds. The path to a thriving, flourishing life
+runs through our elephants.  Their passion is our source of power!
 
 
 
@@ -394,57 +395,16 @@ whip ourselves into shape. The hurt and shame we inflict on ourselves fails to
 bring about the changes we desire. We turn to addictive vices to escape our
 self abuse.  The cycle of disappointment, abuse, and escapism continues.
 
-Metaphors are powerful. They are how we make sense of the world and our place
-in it. Perhaps no metaphor is more important than our metaphor for ourselves.
-By adopting a more accurate self image we can foster compassion for ourselves
-and finally discover the keys to realizing our highest aspirations.
+Because we only have direct cognitive access to the rider, when we talk about
+our goals we give a one-sided account that only incorporates what our rider
+wants. The single most important thing our rider can do is to understand what
+motivates our elephant and connect these motivators to our goals. The ``fire in
+our belly'' so to speak, comes from stories and symbols that are experienced
+viscerally rather than cerebrally.
 
-In an age of cars, machines, and computers it is tempting to adopt a metaphor
-of self that places our conscious mind in the role of operator and the rest of
-us as the machine that is being operated. This metaphor is grossly inaccurate
-and provides little insight about how to create what we seek to create in the
-world.
-
-One of the ancient truths that has been discovered over and over and commented
-on by many different authors is the notion of the divided self. We are not
-simply a conscious mind operating a piece of biological machinery. We are
-actually a collection of different systems cooperating and competing to
-accomplish their own individual goals. Not all of these systems are equally
-intelligent, nor equally powerful.
-
-In his book ''The Happiness Hypothesis'', social scientist Jonathan Haidt takes
-a look at various metaphors for self that have received widespread attention
-throughout the years. He then suggests that we adopt the model of our conscious
-mind as a rider on top of the elephant of our unconscious mind and body.
-Roughly speaking, the rider represents conscious reasoning and the elephant
-represents instinct and emotional reactions. This simple metaphor does much to
-explain day-to-day life.
-
-The model of a rider and an elephant is particularly good at explaining the
-differences between what we say our goals are and our actual behavior. The only
-part of the rider-elephant combination that we have direct cognitive access to
-is the rider. Any time we say something voluntarily, it is the rider who is
-speaking (while the elephant is responsible for things like the reflexive yell
-of pain on touching a hot stove). So when we talk about our goals, we give a
-one-sided account that only incorporates what our rider wants.
-
-The rider will inevitably lose a direct contest of wills against our elephant.
-A skilled rider understands this and works sideways to create an environment in
-which the pair can be successful. This means shaping the stimuli that the
-elephant has access to, in order to limit exposure to undesirable situations
-that take the elephant down a destructive path, and to increase exposure to
-situations that lead to instinctive or emotional responses that motivate
-positive action.
-
-The single most important thing our rider can do is to understand what motivates our elephant and connect these motivators to our goals.  Such motivation does not come from clearly reasoned philosophical arguments.  Powerful motivation, the 'fire in our belly' so to speak, comes from stories and symbols that are experienced viscerally rather than cerebrally.  Evocative stories and symbols speak to our
-unconscious minds and provide a short-cut pathway back to the well of
-inspiration that keeps us motivated.
-
-The path to a thriving, flourishing life runs through our elephant. The
-beautiful life we seek depends upon our rider becoming a clever servant rather
-than a cruel tyrant. 
-Passion belongs to our elephant, it alone knows our unique
-``happy in the sun!''
+The beautiful life we seek depends upon our rider becoming a clever servant
+rather than a cruel tyrant. Passion belongs to our elephant, it alone knows our
+unique ``happy in the sun!''
 
 
 
@@ -454,46 +414,42 @@ Passion belongs to our elephant, it alone knows our unique
 \imagefacingchapter{images/EmpathyIsTranscendant}
 \chapter{Empathy is Transcendent}
 
-\setlength\epigraphwidth{2.8in}
+\setlength\epigraphwidth{2.4in}
 \epigraph{
   Empathy is transcendent.\\
   Without Empathy,\\
   \tab Passion and Wisdom are evil.
 }{}
 
-\noindent Empathy is the mechanism by which we understand and value others. Culture and society spring from Empathy (see Jonathan Haidt Righteous Mind
+\noindent Empathy is the mechanism by which we understand and value others.
+Culture and society spring from Empathy (see Jonathan Haidt Righteous Mind
 Crossing the Rubric chapter). Without Empathy the deep understanding and trust
 so necessary for collective action cannot exist. It is Empathy that spurs us to
 value the needs of others and consider how our actions might impact them.
 
-It can be difficult to cultivate Empathy for strangers in other countries, for the entire body of all Life, and for future generations.  As we make our daily choices, we consider the needs of these abstract entities only as much as we identify with them in our guts.
-And so we create religious images, metaphors, and rituals to give life to these abstract aspirations so that we can relate to them as immediately as we relate to a friend or family member.
+It can be difficult to cultivate Empathy for strangers in other countries, for
+the entire body of all Life, and for future generations. As we make our daily
+choices, we consider the needs of these abstract entities only as much as we
+identify with them in our guts. And so we create religious images, metaphors,
+and rituals to give life to these abstract aspirations so that we can relate to
+them as immediately as we relate to a friend or family member.
 
-Einstein as he developed the theory of relativity often imagined what
-it would be like to ride alongside a beam of light. I invite you to do
-something similar. Imagine yourself actually as a beam of light. A ray of
-sunshine from our star whose name is Sol. As this sunbeam, you have several
-different ways that you can think of yourself. On the one hand you are a
-transient burst of photons that will soon be absorbed and cease to exist. On
-the other hand you are the Sun itself. You are the provider of practically all
-the energy that animates life on earth.
-
-The ability to sometimes perceive ourselves not just as the ephemeral ray of
-light, but as the sun itself can add a great deal of power and purpose to our
-lives. This ability to identify with the larger whole is an essential
-characteristic of spiritual enlightenment. It offers freedom from reactive
-grasping and the option to proactively create our lives.
+The ability to sometimes perceive ourselves not just as an ephemeral individual
+organism, but as the Body of all Life itself can add a great deal of power and
+purpose to our lives. This ability to identify with the larger whole is an
+essential characteristic of spiritual enlightenment. It offers freedom from
+reactive grasping and the option to proactively create our lives.
 
 
 
 
 \imagefacingchapter{images/CultivateEmpathy}
 \chapter{Cultivate Empathy}
-\setlength\epigraphwidth{2.8in}
+\setlength\epigraphwidth{3.4in}
 \epigraph{
   I pledge to love others as I love myself,\\
   to consider their needs as if they were my own ---\\
-  \tab to Grow Ours, not just Get Mine.
+  to Grow Ours, not just Get Mine.
 }{}
 
 \noindent While it may be true that service of others provides happiness and
@@ -503,37 +459,27 @@ look good or even just because we know that service leads to a happier life.
 Service brings the most peace and satisfaction when it springs from a depth of
 character where such service is simply the right thing to do.
 
-There is a trap of motivation that may be called spiritual narcissism. People
-who seek after spiritual enlightenment, satisfaction, and peace as if they are
-the ends themselves rather than the byproduct of a life of service find
-themselves continually lacking peace and satisfaction. The more they focus on
-peace and satisfaction, the bigger the hole becomes that they are trying to
-fill.
+Good religions demand that we live a life of character and that we help others
+because it is ``the right thing to do.'' As we empathize with the people we are
+seeking to help, we also cultivate appreciation for the gift they are giving to
+us by allowing us to participate in the transformative vulnerability of
+accepting assistance.
 
-Part of the paradox stems from the realization that the person we have the most
-direct influence over is ourselves. This makes it seem like we ought to be
-working directly on ourselves. Counterintuitively growth and development of ourselves is fostered
-most directly by developing in ourselves a focus on others. This can be illustrated by
-the attributes of a great conversationalist. The best conversationalists are
-those who are actually interested in what the other person has to say. When the
-other person pauses, the interested listener naturally rephrases what they
-heard to verify they got it, or asks a question about something of particular
-interest. Contrast this with the person whose main motivation is being heard.
-The talker doesn't listen to the other person, instead they organize their own
-thoughts so they can start talking in the first gap that is left.
-
-Good religions demand that we live a life of character and
-that we help others because it is "the right thing to do." As we empathize with the people we are seeking to help, we also cultivate appreciation for the gift they are giving to us by allowing us to participate in the transformative vulnerability of accepting assistance.  The more we humbly appreciate this gift, the more easily we will see the world through their
-eyes, the more our actions in relationship with them will bring peace and satisfaction for everyone involved.
-
-In the fiddler on the roof, Tevye the main character, offers a chunk of cheese to a young stranger who is passing through his town.  Perchik, the young man, refuses ... insisting "I have no money and I'm not a beggar."  Tevye responds, "Ah, take it. It's a blessing for me to give."  The genuiness of the sentiment wins Perchik over, and he accepts the food with a slightly pompous "Very well.  For your sake."  "Thank you. Thank you" replies Tevye as he hands him the food.  Throughout this interchange the empathy the older Tevye feels for young Perchik is clear.  Both men experience an increase in grace and dignity.
+In the fiddler on the roof, Tevye the main character, offers a chunk of cheese
+to a young stranger who is passing through his town. Perchik, the young man,
+refuses ... insisting ``I have no money and I'm not a beggar.'' Tevye responds,
+``Ah, take it. It's a blessing for me to give.'' The genuineness of the sentiment
+wins Perchik over, and he accepts the food with a slightly pompous ``Very well.
+For your sake.'' ``Thank you. Thank you'' replies Tevye as he hands him the food.
+Throughout this interchange the empathy the older Tevye feels for young Perchik
+is clear. Both men experience an increase in grace and dignity.
 
 
 
 \imagefacingchapter{images/WisdomIsEffective}
 \chapter{Wisdom is Effective}
 
-\setlength\epigraphwidth{3.8in}
+\setlength\epigraphwidth{3.5in}
 \epigraph{
   Wisdom is effective.\\
   Without Wisdom,\\
@@ -544,26 +490,24 @@ Wisdom refers to the human ability to use knowledge and experience to develop
 common sense and insight. Wisdom also refers to the human ability to discern or
 judge what is true, right, or lasting.
 
-Memory is a primitive piece of Wisdom. Memory is required for us to accurately recognize and characterize a situation.  Simulation is a more advanced piece of Wisdom. Simulation allows us to imagine how to create something in the future that is different than the current situation.
+Memory is a primitive piece of Wisdom. Memory is required for us to accurately
+recognize and characterize a situation. Simulation is a more advanced piece of
+Wisdom. Simulation allows us to imagine how to create something in the future
+that is different than the current situation.
 
-Even if we are passionately motivated to help others, if we do not understand the mechanisms of cause and effect our actions will be ineffective.  Worse yet, our actions may create unexpected outcomes that cause the situation to deteriorate rather than improve.
+If we do not understand a situation our actions will be ineffective even if we
+are passionately motivated to help others. Worse yet, our half-baked actions
+may create unexpected outcomes that cause the situation to deteriorate rather
+than to improve.
 
-Wisdom is knowing the right thing to do in a given situation in order to bring about a good outcome.  The more practiced we are in responding to a given situation with Wisdom, the more reflexive and instinctive a good response becomes.  Practice is what turns received Wisdom into embodied Wisdom.
+Wisdom is knowing a good action to take in a given situation in order to bring
+about a good outcome. The more practiced we are in responding to a given
+situation with Wisdom, the more reflexive and instinctive a good response
+becomes.  Practice turns received Wisdom into embodied Wisdom.
 
-One aspect of wisdom is learning to change the patterns of our behavior
-and establish better habits of thought and action; these habits conserve our
-limited willpower by allowing us to automatically make choices in line with our
-values. Another aspect is cultivating the intuition that helps us to decide on
-the most positive and effective course of action in uncertain situations, where
-our habits aren't enough to guide us. A third aspect is learning to balance and
-synthesize the reasonable and emotional aspects of our minds, so that we avoid
-making unreasonable choices based solely on emotion, but also accept and
-celebrate the fact that without emotion, reason could never tell us the best
-choice to make because no choice would ''feel'' better than any other. And
-finally, wisdom is fundamentally about accepting reality as it is, not as we
-would wish it to be (which is where science comes in handy), and only working
-to change things after we've determined, to the best of our ability, where and
-how we can actually make a positive difference in the world.
+When we are wise, we show good judgment even in difficult situations that most
+people find overwhelming. With sufficient practice, we can quickly determine
+what is truly important even amidst a cacophony of inputs.
 
 
 
@@ -577,85 +521,37 @@ how we can actually make a positive difference in the world.
   to cultivate sound instincts.
 }{}
 
-\noindent Science is one manifestation of the
-human capacity for Wisdom. When there is data available, we use it. We believe the scientific method is
-currently our best mechanism to learn, codify, and share information about our
-world and universe. The distillation of the scientific method is essentially
-this:
-\begin{itemize}[\textbullet]
-\item Create a recipe that includes how and what you should expect to see
+\noindent The scientific method is currently our best mechanism to learn,
+codify, and share information about our world and universe. The scientific
+method is ideally suited for discovering and communicating truth about the
+objective physical realm as exemplified by the ``hard sciences'' like
+chemistry, geology, neuroscience and the like. With care we can also use the
+scientific method to distill and communicate truth within other realms of
+inquiry.
 
-\item The community of the adequate can then perform the recipe and interpret
-the results, honestly reporting whether the expectation was met or not
+Within the realm of mind we can use the systematic techniques of the scientific
+method to think about and communicate our results in mathematics, logic,
+philosophy and the ``soft sciences'' like psychology, sociology, and
+anthropology. Within the spiritual realm we can carefully evaluate forms of
+meditation and other religious practices to determine which most reliably and
+powerfully produce the fruits we are seeking.
 
-\item Recipes that are confirmed by others are elaborated on
-\end{itemize}
+In a very real sense, we become what we practice. Let us adopt again for the
+moment the metaphor of our minds as a rider (our conscious mind) on an elephant
+(our unconscious mind and body). We can develop wisdom by training the
+rider/elephant combination to automatically react to situations in the ways we
+desire. Regular, effective practice changes our patterns of behavior and
+establishes better habits of thought and action.  These habits of good character
+conserve our limited willpower by allowing us to automatically make choices in
+line with our values without having to puzzle out the situational ethics of
+every encounter.
 
 
-But where do the recipes come from? Ideas for experiments and models with
-predictive power are not generated by science. They are generated by Life's
-creative spark. The same creative juices that stir one person to pen an opus
-stir another person to create a theory to explain cosmic background radiation.
-This creative force is mysterious. Where does it come from? We choose to see it
-as an emergent property of life that occurs when the input from our senses
-combines with memories and ideas stored in our brain in a unique way that
-generates a sudden burst of thought, which synthesizes experience and memory in
-a novel way that gives rise to a new idea. Again, we don't need to invoke
-anything supernatural to describe this wondrous occurrence. Of course, it's
-possible that there is some input into this process from a "higher realm"
-beyond the everyday world of matter-energy-spacetime, but we don't have much to
-say about that possibility because it's currently beyond the reach of
-scientific study.
-
-The community of the adequate is a concept we first learned about from Ken
-Wilber. He makes the point that unless you have a super-collider, it is
-difficult to play back the recipes that are currently being run at CERN - The
-Large Hadron Collider. This requirement keeps the community of the adequate
-quite small to test out the recipes they propose. Likewise, many mathematical
-proofs involve concepts that are beyond the ken of most people. Evaluating
-whether the proof is sound requires a level of expertise that comes only with
-special aptitude and training. This too limits the size of the community of the
-adequate. Mathematical recipes are no less real for being entirely within the
-realm of mind. They are inner recipes rather than outer recipes.
-
-So truth within many different realms can be communicated via the scientific
-method. This is true within the objective physical realm as exemplified by the
-"hard sciences" like chemistry, geology, neuroscience and the like. It is also
-true within the realm of mind and can be seen in mathematics, logic, philosophy
-and the "soft sciences" like psychology, sociology, and anthropology. The
-scientific method even applies to the spiritual side of life to some degree,
-and can be applied to meditation and other recipes for altering one's
-perception of the ground of beingness. But this kind of research must be
-approached with caution for a number of reasons, such as the fact that
-subjective experience is very difficult to measure, and science works best with
-quantitatively measurable results.
-
-One of the degenerations that comes from science being most successfully
-applied to the objective outer space is the collapse of inner and outer realms
-and the collapse of spiritual with objective. An example of this can be seen in
-experiments that try to show there is some sort of telepathic force field that
-operates within and across life. These experiments confuse the essentially
-subjective, spiritual feeling of "oneness with the world" with phenomena like
-root systems or computer networks that objectively link things together. The
-subjective feeling is important and valuable even if it doesn't correspond to
-anything in the world around you, other than the impressions it makes on your
-ordinary senses, which may combine with your learned knowledge of the objective
-interdependence of people, species, and ecosystems within the global biosphere,
-to trigger your spiritual experience.
-
-When we say "religious practice," we don't mean what you probably think. It's
-possible to write a scripture that doesn't resort to the supernatural, and
-create rituals based around the sacredness of what we know to exist. In a way,
-we're already doing this as a society. Scientific research papers comprise the
-ever-changing scripture of a religion whose churches are laboratories and
-university lecture halls. Its "priesthood," the researchers and science
-professors, commands almost universal trust even though they all admit that
-anything they say could turn out to be wrong.
 
 
 \imagefacingchapter{images/WeBringLife}
 \chapter{We Bring Life!}
-\setlength\epigraphwidth{3.8in}
+\setlength\epigraphwidth{2.8in}
 \epigraph{
   Through Passion, Empathy, and Wisdom,\\
   we have come to know that:\\
@@ -668,10 +564,12 @@ anything they say could turn out to be wrong.
   \tab We Bring Life!
 }{}
 
+Life is not a binary property where we are either alive or dead. Life is a
+continuous property such that an individual organism, a group of organisms, and
+indeed the body of all life can be more or less alive from moment to moment. We
+seek to bring more life to ourselves, our communities, our world, indeed even
+unto the galaxy! Our religion succeeds in direct relation to how effective it
+is in supporting us in bringing life at each of these scales of abstraction.
 
-\begin{quote}
-\em
-  Don't tell me what you believe, show me what you do and I will tell you what you believe. --civil rights movement quote
-\end{quote}
 
 \end{document}
